syntax = "proto3";

package xyz.astolfo.websocket.rpc;

service WebsocketSubscriber {
    rpc onEvent (RawEvent) returns (SubResponse) {}
}

message SubResponse {
}

message RawEvent {
    string trace_id = 1;
    uint32 shard_id = 2;
    uint64 bot_id = 3;
    string name = 4;
    string data = 5;
}

message Subscriber {
    string hostname = 1;
    uint32 port = 2;
}